--- a/main.html
+++ b/main.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
+
+	<h1>Tajmahal</h1>
+	<hr>
+	<p>Rajasthan is a land of rich history, majestic palaces, and grand forts that showcase its royal heritage. Tourists from all over the world visit iconic places like Jaipur, Udaipur, Jaisalmer, and Jodhpur to witness the architectural beauty of forts like Amer Fort, Mehrangarh Fort, and City Palace. The state is also known for its vibrant culture, with traditional folk dances, music, and colorful festivals adding to its charm. Visitors can experience the golden sand dunes with desert safaris in Thar Desert, stay in luxurious heritage hotels, and savor authentic Rajasthani cuisine like Dal Baati Churma.</p>
+	<ol>
+		<li><b>Jaipur</b> – The Pink City, famous for Amer Fort, Hawa Mahal, and vibrant bazaars.</li>
+	     <li><b>Udaipur</b> – The City of Lakes, known for its stunning Lake Palace and City Palace.</li>
+         <li><b>Mount Abu</b> – Rajasthan’s only hill station, known for the serene Nakki Lake and Dilwara Temples.</li>
+         <li><b>Jaisalmer</b> – The Golden City, home to Jaisalmer Fort and exciting desert safaris.</li>
+         <li><b>Jodhpur</b> – The Blue City, featuring the majestic Mehrangarh Fort and Umaid Bhawan Palace.</li>
+	</ol>
+	<ul>
+    <li><b>Dal Baati Churma</b> – A signature Rajasthani dish consisting of baked wheat dumplings, lentils, and a sweet churma.</li>
+    <li><b>Laal Maas</b> – A spicy mutton curry cooked with red chilies and rich Rajasthani spices.</li>
+    <li><b>Gatte ki Sabzi</b> – Gram flour dumplings cooked in a yogurt-based curry, a popular vegetarian dish.</li>
+    <li><b>Ker Sangri</b> – A traditional dish made with dried desert beans and berries, cooked with spices.</li>
+    <li><b>Ghewar</b> – A delicious Rajasthani sweet made with flour, soaked in sugar syrup, and topped with dry fruits.</li>
+</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
