--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 
-	<h1>Tajmahal</h1>
+	<h1>Rajasthan</h1>
 	<hr>
 	<p>Rajasthan is a land of rich history, majestic palaces, and grand forts that showcase its royal heritage. Tourists from all over the world visit iconic places like Jaipur, Udaipur, Jaisalmer, and Jodhpur to witness the architectural beauty of forts like Amer Fort, Mehrangarh Fort, and City Palace. The state is also known for its vibrant culture, with traditional folk dances, music, and colorful festivals adding to its charm. Visitors can experience the golden sand dunes with desert safaris in Thar Desert, stay in luxurious heritage hotels, and savor authentic Rajasthani cuisine like Dal Baati Churma.</p>
 	<ol>
